--- a/src/render_engine_theme_kjaymiller/templates/header.html
+++ b/src/render_engine_theme_kjaymiller/templates/header.html
@@ -1,4 +1,4 @@
-<div class="
+<nav role="navigation" class="
   bg-gradient-to-br    
 from-purple-600
 to-indigo-800
@@ -29,4 +29,4 @@ to-indigo-800
       {% endfor %}
   </div>
   {% include 'social-cards.html' %}
-</div>
+</nav>
