--- a/src/render_engine_theme_kjaymiller/templates/base.html
+++ b/src/render_engine_theme_kjaymiller/templates/base.html
@@ -16,10 +16,10 @@
   <body class="dark:bg-slate-800 dark:text-slate-100"> 
     <div class="flex flex-col h-screen">
       {% include 'header.html' %}
-      <div class="flex-grow mx-2 md:mx-auto container">
+      <main class="flex-grow mx-2 md:mx-auto container">
         {% block content %} {% endblock %}
         {% block add_ons %} {% endblock %}
-      </div>
+      </main role="main">
       <div>
       {% include 'footer.html' %}
       </div>
