--- a/src/render_engine_theme_kjaymiller/templates/footer.html
+++ b/src/render_engine_theme_kjaymiller/templates/footer.html
@@ -1,5 +1,5 @@
 <hr />
-<footer class="bottom-0 container mx-auto shadow rounded-md bottom-0 bg-slate-50 dark:bg-slate-800 dark:text-slate-100 px-4 my-4 h-24">
+<footer role="contentinfo" class="bottom-0 container mx-auto shadow rounded-md bottom-0 bg-slate-50 dark:bg-slate-800 dark:text-slate-100 px-4 my-4 h-24">
   <div class="lg:flex md:mx-auto h-full justify-around items-center">
     <p> kjaymiller.com</p>
     <p>Website made with <a
