change social cards

--- a/src/render_engine_theme_kjaymiller/templates/header.html
+++ b/src/render_engine_theme_kjaymiller/templates/header.html
@@ -30,5 +30,5 @@ from-{{COLOR_MAIN_1}}
       </a>
       {% endfor %}
   </div>
-  {% include 'social-cards.html' %}
+  {% include 're-kjm-social-cards.html' %}
 </nav>
