--- a/src/render_engine_theme_kjaymiller/templates/re-kjm-social-cards.html
+++ b/src/render_engine_theme_kjaymiller/templates/re-kjm-social-cards.html
@@ -1,15 +1,15 @@
-{% if youtube %}
-<a class="p-1" href="youtube">
+{% if theme.links.youtube %}
+<a class="p-1" href="{{theme.links.youtube}}">
     <i class="text-red-700 text-2xl m-1 fa-brands fa-youtube"></i>
 </a>
 {% endif %}
-{% if twitter %}
-<a class="rounded-xl opacity-50 p-1 hover:opacity-100" href="{{twitter}}">
+{% if theme.links.twitter %}
+<a class="rounded-xl opacity-50 p-1 hover:opacity-100" href="{{theme.links.twitter}}">
     <i class=" text-blue-500 m-1 text-2xl fa-brands fa-twitter-square"></i>
 </a>
 {% endif %}
-{% if linkedin %}
-<a class="rounded-xl opacity-50  p-1 hover:opacity-100" href="{{linkedin}}">
+{% if theme.links.linkedin %}
+<a class="rounded-xl opacity-50  p-1 hover:opacity-100" href="{{theme.links.linkedin}}">
     <i class=" text-blue-900 m-1 text-2xl fa-brands fa-linkedin"></i>
 </a>
 {% endif %}
