--- a/src/render_engine_theme_kjaymiller/templates/re-kjm-social-cards.html
+++ b/src/render_engine_theme_kjaymiller/templates/re-kjm-social-cards.html
@@ -1,15 +1,15 @@
 {% if theme.links.youtube %}
-<a class="p-1" href="{{theme.links.youtube}}">
+<a class="p-1 no-underline" href="{{theme.links.youtube}}">
     <i class="text-red-700 text-2xl m-1 fa-brands fa-youtube"></i>
 </a>
 {% endif %}
 {% if theme.links.twitter %}
-<a class="rounded-xl opacity-50 p-1 hover:opacity-100" href="{{theme.links.twitter}}">
+<a class="rounded-xl no-underline opacity-50 p-1 hover:opacity-100" href="{{theme.links.twitter}}">
     <i class=" text-blue-500 m-1 text-2xl fa-brands fa-twitter-square"></i>
 </a>
 {% endif %}
 {% if theme.links.linkedin %}
-<a class="rounded-xl opacity-50  p-1 hover:opacity-100" href="{{theme.links.linkedin}}">
+<a class="rounded-xl opacity-50 no-underline p-1 hover:opacity-100" href="{{theme.links.linkedin}}">
     <i class=" text-blue-900 m-1 text-2xl fa-brands fa-linkedin"></i>
 </a>
 {% endif %}
