--- a/src/render_engine_theme_kjaymiller/templates/re-kjm-social-cards.html
+++ b/src/render_engine_theme_kjaymiller/templates/re-kjm-social-cards.html
@@ -13,3 +13,13 @@
     <i class=" text-blue-900 m-1 text-2xl fa-brands fa-linkedin"></i>
 </a>
 {% endif %}
+{% if theme.links.github %}
+<a class="rounded-xl opacity-50 no-underline p-1 hover:opacity-100" href="{{theme.links.github}}">
+    <i class=" text-blue-900 m-1 text-2xl fa-brands fa-github"></i>
+</a>
+{% endif %}
+{% if theme.links.mastodon %}
+<a class="rounded-xl opacity-50 no-underline p-1 hover:opacity-100" href="{{theme.links.mastodon}}">
+    <i class=" text-blue-900 m-1 text-2xl fa-brands fa-mastodon"></i>
+</a>
+{% endif %}
