correct author prompt

--- a/src/render_engine_theme_kjaymiller/templates/contact.html
+++ b/src/render_engine_theme_kjaymiller/templates/contact.html
@@ -7,7 +7,7 @@
     {% endif %}
 </div>
 
-<form class="p-2 border rounded-lg" method="POST" action="https://formspree.io/f/{{author.email}}">
+<form class="p-2 border rounded-lg" method="POST" action="https://formspree.io/f/{{AUTHOR.email}}">
         <div class="m-2">
             <label class="font-bold" for="#name">Name</label>
             <input id="name" class="border rounded p-2" type="text" name="Name" placeholder="What I should call you" style="width: 30%;">
