--- a/src/render_engine_theme_kjaymiller/templates/re-kjm-social-cards.html
+++ b/src/render_engine_theme_kjaymiller/templates/re-kjm-social-cards.html
@@ -6,28 +6,28 @@
 {% endif %}
 {% endmacro %}
 
-{% if theme.links.youtube %}
-<a class="p-1 no-underline" href="{{theme.links.youtube}}">
+{% if theme.social.youtube %}
+<a class="p-1 no-underline" href="{{theme.social.youtube}}">
     <i class="{{social_icon_color('text-red-700')}} text-2xl m-1 fa-brands fa-youtube"></i>
 </a>
 {% endif %}
-{% if theme.links.twitter %}
-<a class="rounded-xl no-underline opacity-50 p-1 hover:opacity-100" href="{{theme.links.twitter}}">
+{% if theme.social.twitter %}
+<a class="rounded-xl no-underline opacity-50 p-1 hover:opacity-100" href="{{theme.social.twitter}}">
     <i class="{{social_icon_color('text-slate-800')}} m-1 text-2xl fa-brands fa-x-twitter"></i>
 </a>
 {% endif %}
-{% if theme.links.linkedin %}
-<a class="rounded-xl opacity-50 no-underline p-1 hover:opacity-100" href="{{theme.links.linkedin}}">
+{% if theme.social.linkedin %}
+<a class="rounded-xl opacity-50 no-underline p-1 hover:opacity-100" href="{{theme.social.linkedin}}">
     <i class="{{social_icon_color('text-blue-900')}} m-1 text-2xl fa-brands fa-linkedin"></i>
 </a>
 {% endif %}
-{% if theme.links.github %}
-<a class="rounded-xl opacity-50 no-underline p-1 hover:opacity-100" href="{{theme.links.github}}">
+{% if theme.social.github %}
+<a class="rounded-xl opacity-50 no-underline p-1 hover:opacity-100" href="{{theme.social.github}}">
     <i class="{{social_icon_color('text-slate-800')}} m-1 text-2xl fa-brands fa-github"></i>
 </a>
 {% endif %}
-{% if theme.links.mastodon %}
-<a class="rounded-xl opacity-50 no-underline p-1 hover:opacity-100" href="{{theme.links.mastodon}}">
+{% if theme.social.mastodon %}
+<a class="rounded-xl opacity-50 no-underline p-1 hover:opacity-100" href="{{theme.social.mastodon}}">
     <i class="{{social_icon_color('text-indigo-400')}} m-1 text-2xl fa-brands fa-mastodon"></i>
 </a>
 {% endif %}
