add social-cards to footer

--- a/src/render_engine_theme_kjaymiller/templates/footer.html
+++ b/src/render_engine_theme_kjaymiller/templates/footer.html
@@ -7,7 +7,7 @@
     
     hosted on Azure Static Web Apps                        <div>
       <a class="hover:underline" href="/blog.rss"><span class="icon"><i class="fas fa-rss"></i></a>
-      {% include 'social-cards.html' %}
+      {% include 're-kjm-social-cards.html' %}
     </div>
   </div>
 </footer>
