--- a/src/render_engine_theme_kjaymiller/templates/header.html
+++ b/src/render_engine_theme_kjaymiller/templates/header.html
@@ -24,8 +24,9 @@ from-{{COLOR_MAIN_1}}
             opacity-75
             hover:opacity-100
             hover:text-indigo-800
-            font-bold
-            hover:font-semibold
+            font-semibold
+            text-xl
+            hover:font-bold
             text-slate-800
             no-underline
           " href="{{link.url}}">
