--- a/src/render_engine_theme_kjaymiller/templates/footer.html
+++ b/src/render_engine_theme_kjaymiller/templates/footer.html
@@ -1,9 +1,9 @@
 <hr />
 <footer role="contentinfo" class="bottom-0 container mx-auto shadow rounded-md bottom-0 bg-slate-50 dark:bg-slate-800 dark:text-slate-100 px-4 my-4 h-24">
-  <div class="lg:flex md:mx-auto h-full justify-around items-center">
-    <p> kjaymiller.com</p>
-    <p>Website made with <a
-                            class="hover:underline" href="https://github.com/kjaymiller/render_engine">Render Engine</a> and <a href="https://tailwindcss.com">TailwindCSS</a>
+  <div class="lg:flex md:mx-auto h-full justify-around items-center text-small">
+    <p>{{SITE_URL}}</p>
+    <p>Website Created with<a
+                            class="hover:underline" href="https://github.com/render-engine/render-engine">Render Engine</a> and the <a href="https://github.com/kjaymiller/render-engine-kjaymiller-theme">kjaymiller theme</a>
     
     hosted on Azure Static Web Apps                        <div>
       <a class="hover:underline" href="/blog.rss"><span class="icon"><i class="fas fa-rss"></i></a>
