--- a/src/render_engine_theme_kjaymiller/static/css/tailwind.css
+++ b/src/render_engine_theme_kjaymiller/static/css/tailwind.css
@@ -6,6 +6,6 @@ aside.admonition {
     @apply rounded bg-slate-100 dark:bg-slate-600 text-stone-800 dark:text-stone-200 p-3
 }
 
-a {
+.prose > a {
     @apply underline
 }
