--- a/src/render_engine_theme_kjaymiller/templates/base.html
+++ b/src/render_engine_theme_kjaymiller/templates/base.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    {% if analytics is defined %}
+    {% include '_analytics.html' %}
+    {% endif %}
     <!-- Required meta tags -->
-    <link rel="icon" href="https://fav.farm/📓" />
+    {% if theme.favicon is defined %}
+    <link rel="icon" href="{{favicon}}" />
+    {% endif %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="/static/css/tailwind.css" />
-    <script src="https://kit.fontawesome.com/94d9a219ee.js" crossorigin="anonymous"></script>
+    {% if theme.fontawesome is defined %}
+    <script src="https://kit.fontawesome.com/{{theme.fontawesome}}.js" crossorigin="anonymous"></script>
+    {% endif %}
     {% block head %}{% endblock %}
     <title>
       {% if title != "Index" %}
@@ -18,10 +25,9 @@
       {% include 'header.html' %}
       <main class="flex-grow mx-2 md:mx-auto container">
         {% block content %} {% endblock %}
-        {% block add_ons %} {% endblock %}
       </main role="main">
       <div>
-      {% include 'footer.html' %}
+      {% include '_footer.html' %}
       </div>
     </div>
   </body>
