--- a/src/render_engine_theme_kjaymiller/templates/base.html
+++ b/src/render_engine_theme_kjaymiller/templates/base.html
@@ -22,7 +22,7 @@
   </head>
   <body class="dark:bg-slate-800 dark:text-slate-100"> 
     <div class="flex flex-col h-screen">
-      {% include 'header.html' %}
+      {% include '_header.html' %}
       <main class="flex-grow mx-2 md:mx-auto container">
         {% block content %} {% endblock %}
       </main role="main">
