add dark mode text

--- a/src/render_engine_theme_kjaymiller/templates/_header.html
+++ b/src/render_engine_theme_kjaymiller/templates/_header.html
@@ -27,6 +27,7 @@ from-{{COLOR_MAIN_1}}
             font-semibold
             text-xl
             hover:font-bold
+            dark:text-slate-200
             text-slate-800
             no-underline
           " href="{{link.url}}">
