--- a/src/render_engine_theme_kjaymiller/templates/_header.html
+++ b/src/render_engine_theme_kjaymiller/templates/_header.html
@@ -3,7 +3,7 @@
 <nav role="navigation"><div class="
   bg-gradient-to-br    
 from-{{COLOR_MAIN_1}}
-{{COLOR_MAIN_1 | theme_gradient_to(100) }}
+{{COLOR_MAIN_1 | theme_gradient_to(header_gradient_inverval or 100) }}
   flex
   flex-wrap
   items-baseline
