--- a/src/render_engine_theme_kjaymiller/templates/base.html
+++ b/src/render_engine_theme_kjaymiller/templates/base.html
@@ -6,7 +6,7 @@
     {% endif %}
     <!-- Required meta tags -->
     {% if theme.favicon is defined %}
-    <link rel="icon" href="{{favicon}}" />
+    <link rel="icon" href="{{favicon or 'https://fav.farm/::👩🏾‍💻}}'" />
     {% endif %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
