--- a/src/render_engine_theme_kjaymiller/templates/_footer.html
+++ b/src/render_engine_theme_kjaymiller/templates/_footer.html
@@ -12,6 +12,8 @@
       {% endif %}
     </div>
     <div>
+    {% if 'social' in 'theme' %}
     {% include 're-kjm-social-cards.html' %}
+    {% endif %}
   </div>
 </footer>
