--- a/src/render_engine_theme_kjaymiller/templates/page.html
+++ b/src/render_engine_theme_kjaymiller/templates/page.html
@@ -6,7 +6,7 @@
 <div class="my-4">
     <h1 class="text-4xl font-extrabold">{{title}}</h1>
 </div>
-<article class="prose">
+<article class="prose lg:prose-xl dark:prose-invert prose-slate">
     {{content}}
 </article>
 </section>
