--- a/output/static/css/tailwind.css
+++ b/output/static/css/tailwind.css
@@ -6,6 +6,6 @@ aside.admonition {
     @apply rounded bg-slate-100 dark:bg-slate-600 text-stone-800 dark:text-stone-200 p-3
 }
 
-.prose > a {
+a {
     @apply underline
 }
