--- a/src/render_engine_theme_kjaymiller/templates/base.html
+++ b/src/render_engine_theme_kjaymiller/templates/base.html
@@ -1,27 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    {% if analytics is defined %}
-    {% include '_analytics.html' %}
-    {% endif %}
-    <!-- Required meta tags -->
-    {% if favicon in theme %}
-    <link rel="icon" href="{{theme.favicon}}" />
-    {% else %}
-    <link rel="icon" href="https://fav.farm/👩🏾‍💻" />
-    {% endif %}
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="/static/css/tailwind.css" />
-    {% if theme.fontawesome is defined %}
-    <script src="https://kit.fontawesome.com/{{theme.fontawesome}}.js" crossorigin="anonymous"></script>
-    {% endif %}
-    {% block head %}{% endblock %}
-    <title>
-      {% if title != "Index" %}
-      {{title}} - {% endif %}{{SITE_TITLE}}
-    </title>
-  </head>
+  {% include '_head.html' %}
   <body class="dark:bg-slate-800 dark:text-slate-100"> 
     <div class="flex flex-col h-screen">
       {% include '_header.html' %}
