--- a/src/render_engine_theme_kjaymiller/templates/page.html
+++ b/src/render_engine_theme_kjaymiller/templates/page.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block title %}{{title}}{% endblock%}
-{% block head %}<link rel="stylesheet" href="/static/css/article.css" />{% endblock %}
+{% block head %}{% endblock %}
 {% block content %}
 <section>
 <div class="my-4">
