--- a/src/render_engine_theme_kjaymiller/templates/_archive.html
+++ b/src/render_engine_theme_kjaymiller/templates/_archive.html
@@ -12,7 +12,7 @@
           {% if post.category %}
           <a class="hover:underline" href="{{COLLECTION_OUTPUT_PATH}}/category/{{post.category}}-0">{{post.category}}</a>
           {% endif %}
-          <h2 class="text-3xl font-bold">
+          <h2 class="text-2xl font-light">
             <a href="{{post.url_for()}}">{{post.title}}</a>
           </h2>
           <div class="flex">
