--- a/src/render_engine_theme_kjaymiller/templates/blog_list.html
+++ b/src/render_engine_theme_kjaymiller/templates/blog_list.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block title %}{{title}}{% endblock %}
 {% block content %}
-<h2 class="mt-8 title text-3xl font-bold">{{title}}</h2>
+<h2 class="mt-8 title text-2xl font-semibold">{{title}}</h2>
 <div class="">
     <div class="container mx-auto">
         {% include '_archive.html' %}
