--- a/src/render_engine_theme_kjaymiller/templates/_header.html
+++ b/src/render_engine_theme_kjaymiller/templates/_header.html
@@ -32,7 +32,7 @@
             dark:text-slate-200
             text-slate-800
             no-underline
-          " href="{{link.url}}"
+          " href="{{link.url|to_absolute}}"
           aria-label="{{link.text}}">
           {% if link.icon is defined %}
           <i class="{{link.icon}}" aria-hidden="true" title="{{link.text}}"></i>
