--- a/src/render_engine_theme_kjaymiller/templates/_archive.html
+++ b/src/render_engine_theme_kjaymiller/templates/_archive.html
@@ -13,7 +13,7 @@
           <a class="hover:underline" href="{{COLLECTION_OUTPUT_PATH}}/category/{{post.category}}-0">{{post.category}}</a>
           {% endif %}
           <h2 class="text-xl font-light">
-            <a href="{{post.url_for()}}">{{post.title}}</a>
+            <a href="{{SITE_URL}}{{post.url_for()}}">{{post.title}}</a>
           </h2>
           <div class="flex">
             {% if post.date is defined %}
