remove check for language code

--- a/src/render_engine_theme_kjaymiller/templates/_header.html
+++ b/src/render_engine_theme_kjaymiller/templates/_header.html
@@ -16,7 +16,7 @@
     </h1>
     </div>
     <div class="my-2 p-2 flex justify-center">
-    {% if language is defined and f'{language_code}_NAVIGATION' in globals %}
+    {% if language is defined %}
       {% set HEADER_LINKS = globals[f'{language_code}_NAVIGATION'] %}
     {% else %}
       {% set HEADER_LINKS = NAVIGATION %}
