--- a/src/render_engine_theme_kjaymiller/templates/_header.html
+++ b/src/render_engine_theme_kjaymiller/templates/_header.html
@@ -17,7 +17,9 @@
     </div>
     <div class="my-2 p-2 flex justify-center">
     {% if language is defined %}
-      {% set HEADER_LINKS = globals[f'{language}_NAVIGATION'] %}
+      {% if language in NAVIGATION %}
+        {% set HEADER_LINKS = NAVIGATION[language] %}
+      {% endif %}
     {% else %}
       {% set HEADER_LINKS = NAVIGATION %}
     {% endif % }
