--- a/src/render_engine_theme_kjaymiller/templates/contact.html
+++ b/src/render_engine_theme_kjaymiller/templates/contact.html
@@ -28,7 +28,7 @@
 	<button class="w-48 border bg-slate-50 text-purple-800 p-2 rounded-lg hover:bg-purple-800 hover:text-slate-50" type="submit" >Send</button>
 </form>
 {% else %}
-You can email me at <a href="mailto:{{AUTHOR.email}}">{{AUTHOR.email}}</a>
+You can email me at <a href="mailto:{{SITE_AUTHOR.email}}">{{SITE_AUTHOR.email}}</a>
 {% endif %}
 <section class="section">
 <div class="my-5 py-6 ">
