fixes reference to SITE_URL causing 404

--- a/src/render_engine_theme_kjaymiller/templates/_head.html
+++ b/src/render_engine_theme_kjaymiller/templates/_head.html
@@ -13,9 +13,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     {# Stylesheets #}
     <!-- Tailwind CSS -->
-    <link rel="stylesheet" href="{{SITE_URL}}static/css/tailwind.css" />
+    <link rel="stylesheet" href="{{SITE_URL}}/static/css/tailwind.css" />
     <!-- Pygments for code blocks -->
-    <link rel="stylesheet" href="{{SITE_URL}}static/css/pygments.css" />
+    <link rel="stylesheet" href="{{SITE_URL}}/static/css/pygments.css" />
     {% if theme.fontawesome is defined %}
     <script src="https://kit.fontawesome.com/{{theme.fontawesome}}.js" crossorigin="anonymous"></script>
     {% endif %}
