--- a/src/render_engine_theme_kjaymiller/templates/contact.html
+++ b/src/render_engine_theme_kjaymiller/templates/contact.html
@@ -7,29 +7,9 @@
     {% endif %}
 </div>
 
-{% if 'formspree' in theme %}
-<form class="p-2 border rounded-lg" method="POST" action="https://formspree.io/f/{{AUTHOR.email}}">
-        <div class="m-2">
-            <label class="font-bold" for="#name">Name</label>
-            <input id="name" class="border rounded p-2" type="text" name="Name" placeholder="What I should call you" style="width: 30%;">
-        </div>
+<p>You can email me at <a href="mailto:{{OWNER.email}}">{{OWNER.email}}</a></p>
 
-	    <div class="m-2">
-            <label class="font-bold" for="#email">Email</label>
-            <input class="border rounded p-2" id="email" type="email" name="email" placeholder="you@example.com" style="width: 30%;">
-		</div>
 
-        <div class="m-2">
-            <label class="font-bold" for="#message">Message</label>
-        </div>
-        <div class="m-2">
-            <textarea id="message" name="message" class="border rounded p-2" style="min-width: 50%; height: 150px;" placeholder="Your message"></textarea>
-    	</div>
-	<button class="w-48 border bg-slate-50 text-purple-800 p-2 rounded-lg hover:bg-purple-800 hover:text-slate-50" type="submit" >Send</button>
-</form>
-{% else %}
-You can email me at <a href="mailto:{{SITE_AUTHOR.email}}">{{SITE_AUTHOR.email}}</a>
-{% endif %}
 <section class="section">
 <div class="my-5 py-6 ">
 <div class="content">
