--- a/src/render_engine_theme_kjaymiller/templates/_footer.html
+++ b/src/render_engine_theme_kjaymiller/templates/_footer.html
@@ -13,7 +13,10 @@
     </div>
     <div id="footer-column-3">
     {% if 'social' in theme %}
-    {% include 're-kjm-social-cards.html' %}
+    {% if 'fontawesome' in theme %}
+    {% include 'fontawesome-social-cards.html' %}
+    {% else %}
+    {% include 'social-cards.html' %}
     {% endif %}
   </div>
 </footer>
