--- a/src/render_engine_theme_kjaymiller/templates/contact.html
+++ b/src/render_engine_theme_kjaymiller/templates/contact.html
@@ -1,3 +1,4 @@
+{% from 'components/social.html' import social_cards with context %}
 {% extends 'base.html' %}
 {% block content %}
 <div class="border my-5 p-3 shadow-lg">
@@ -14,9 +15,7 @@
 <div class="my-5 py-6 ">
 <div class="content">
     <h3 class="text-2xl">Social Media</h3>
-
-    {% include 're-kjm-social-cards.html' %}
-
+    {{social_cards()}}
 </div>
 </div>
 </section>
