--- a/src/render_engine_theme_kjaymiller/templates/_footer.html
+++ b/src/render_engine_theme_kjaymiller/templates/_footer.html
@@ -1,3 +1,4 @@
+{% from "componests/social-cards.html" import social_cards() with context %}
 <hr class="mt-4 "/>
 <footer role="contentinfo" class="grid grid-cols-3 bottom-0 container mx-auto shadow rounded-md bottom-0 bg-slate-50 dark:bg-slate-800 dark:text-slate-100 px-4 my-4 h-24">
   <div id="footer-column-1" class= md:mx-auto text-small">
@@ -12,11 +13,6 @@
       {% endif %}
     </div>
     <div id="footer-column-3">
-    {% if 'social' in theme %}
-    {% if 'fontawesome' in theme %}
-    {% include 'fontawesome-social-cards.html' %}
-    {% else %}
-    {% include 'social-cards.html' %}
-    {% endif %}
+      {{social_cards()}}
   </div>
 </footer>
