--- a/src/render_engine_theme_kjaymiller/templates/contact.html
+++ b/src/render_engine_theme_kjaymiller/templates/contact.html
@@ -1,4 +1,4 @@
-{% from 'components/social.html' import social_cards with context %}
+{% from 'components/social-cards.html' import social_cards with context %}
 {% extends 'base.html' %}
 {% block content %}
 <div class="border my-5 p-3 shadow-lg">
