--- a/src/render_engine_theme_kjaymiller/templates/blog.html
+++ b/src/render_engine_theme_kjaymiller/templates/blog.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'overrides/base.html' %}
 {% block title %}{{title}}{% endblock %}
 {% block head %}
   <!-- Meta Card Tags-->
