--- a/src/render_engine_theme_kjaymiller/templates/index.html
+++ b/src/render_engine_theme_kjaymiller/templates/index.html
@@ -1,4 +1,4 @@
-{% extends 'base.html'%} {% block head %}
+{% extends 'kjaymiller_com/base.html'%} {% block head %}
 <!-- <link rel="stylesheet" type="text/css" href="/static/css/index.css" /> -->
 {% endblock %}
 {% block content %}
