--- a/src/render_engine_theme_kjaymiller/templates/kjaymiller_com/base.html
+++ b/src/render_engine_theme_kjaymiller/templates/kjaymiller_com/base.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html" %}
   {% include '_head.html' %}
+  {{super()}}
   <body class="dark:bg-slate-800 dark:text-slate-100"> 
     <div class="flex flex-col h-screen">
       {% include '_header.html' %}
