--- a/src/render_engine_theme_kjaymiller/templates/index.html
+++ b/src/render_engine_theme_kjaymiller/templates/index.html
@@ -1,6 +1,4 @@
-{% extends 'kjaymiller_com/base.html'%} {% block head %}
-<!-- <link rel="stylesheet" type="text/css" href="/static/css/index.css" /> -->
-{% endblock %}
+{% extends 'base.html'%} 
 {% block content %}
   {% if hero %}
     <section class="py-4 my-2">
