--- a/src/render_engine_theme_kjaymiller/templates/base.html
+++ b/src/render_engine_theme_kjaymiller/templates/base.html
@@ -8,7 +8,7 @@
         {% block head %}
         {% for headers in head %}
           {% for header in headers %}
-            {{header}}
+            {% include header %}
           {% endfor %}
         {% endfor %}
         {% endblock %}
