--- a/src/render_engine_theme_kjaymiller/templates/components/_footer.html
+++ b/src/render_engine_theme_kjaymiller/templates/components/_footer.html
@@ -1,4 +1,4 @@
-{% from "components/social-cards.html" import social_cards with context %}
+{% from "components/social-cards.html" import add_social_cards with context %}
 <hr class="mt-4 "/>
 <footer role="contentinfo" class="grid grid-cols-3 bottom-0 container mx-auto shadow rounded-md bottom-0 bg-slate-50 dark:bg-slate-800 dark:text-slate-100 px-4 my-4 h-24">
   <div id="footer-column-1" class= md:mx-auto text-small">
@@ -13,6 +13,6 @@
     {% endif %}
     </div>
     <div id="footer-column-3">
-      {{social_cards()}}
+      {{add_social_card()}}
   </div>
 </footer>
