--- a/src/render_engine_theme_kjaymiller/templates/page.html
+++ b/src/render_engine_theme_kjaymiller/templates/page.html
@@ -3,9 +3,7 @@
 {% block head %}{% endblock %}
 {% block content %}
 <section>
-<div class="my-4">
-    <h1 class="text-4xl font-extrabold">{{title}}</h1>
-</div>
+    {% include page_title %}
 <article class="prose lg:prose-xl dark:prose-invert prose-slate">
     {{content}}
 </article>
