--- a/src/render_engine_theme_kjaymiller/templates/page.html
+++ b/src/render_engine_theme_kjaymiller/templates/page.html
@@ -3,7 +3,7 @@
 {% block head %}{% endblock %}
 {% block content %}
 <section>
-    {% include page_title %}
+    {% include "components/page_title" %}
 <article class="prose lg:prose-xl dark:prose-invert prose-slate">
     {{content}}
 </article>
