updates header title

--- a/src/render_engine_theme_kjaymiller/templates/components/_header.html
+++ b/src/render_engine_theme_kjaymiller/templates/components/_header.html
@@ -11,11 +11,14 @@
   ">
   {% set TITLE_SIZE = theme.get('title_size', 'large') %}
   {% set sizes = {"large": "5xl", "medium": "3xl", "small": "xl"} %}
-    <h1 class="title mx-3 text-{{sizes[TITLE_SIZE]}} font-bold text-gray-800">
-      <a class="no-underline" href="{{SITE_URL}}">{{SITE_TITLE}}</a>
+    <h1 class="title mx-3 text-{{sizes[TITLE_SIZE]}} font-bold dark:text-gray-50 text-gray-800">
+      <a class="no-underline dark:text-slate-50" href="{{SITE_URL}}">{{SITE_TITLE}}</a>
     </h1>
     </div>
-    <div class="my-2 p-2 flex justify-center">
+    <div class="lg:hidden">
+      <button>Menu</button>
+    </div>
+    <div class="lg:inline-block my-2 p-2 flex justify-center">
     
     {% for link in NAVIGATION %}
       <a class="
