removes base.html changes block content to block html remove list of head

--- a/src/render_engine_theme_kjaymiller/templates/index.html
+++ b/src/render_engine_theme_kjaymiller/templates/index.html
@@ -1,5 +1,5 @@
 {% extends 'base.html'%} 
-{% block content %}
+{% block body %}
   {% if hero %}
     <section class="py-4 my-2">
       {% if hero.target %}
