--- a/src/render_engine_theme_kjaymiller/templates/index.html
+++ b/src/render_engine_theme_kjaymiller/templates/index.html
@@ -1,6 +1,9 @@
 {% extends 'base.html'%} 
 {% block body %}
 {{super()}}
+{% block header %}
+  {% include "kjaymiller_com/components/_header.html" %}
+{% endblock %}
   {% if hero %}
     <section class="py-4 my-2">
       {% if hero.target %}
@@ -54,5 +57,7 @@
     {% endfor %}
   {% endif %}
 </section>
-
+{% block footer %}
+{% include "kjaymiller_com/components/_footer.html" %}
+{% endblock %}
 {% endblock %}
